fix word break in safari

--- a/frontend/stylus/style.styl
+++ b/frontend/stylus/style.styl
@@ -6,6 +6,10 @@
 .main
   margin-top 130px
 
+
+body
+  word-break keep-all
+  word-wrap: break-word
 .flex
   display flex
 .container
